--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-router-dom": "4.2.2",
     "react-scripts": "^2.1.8",
     "reactstrap": "^8.4.1"
   },
