--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "^2.1.8",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
