--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "^2.1.8",
     "reactstrap": "^8.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
