--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux-form": "^1.16.14",
     "react-router-dom": "4.2.2",
     "react-scripts": "^2.1.8",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
